# snake-game

./: .flake8  .gitignore  CODE_QUALITY.md  DEVELOPMENT.md  LICENSE  README.md  coverage.json  download_emoji_images.py  download_specific_snake.py  generate_fruit_images.py  high_scores.json  pyproject.toml  test_game.py
.github/workflows/: ci.yml
scripts/: fix-hook-loop.py  format-code.py  generate_badges.py  pre-commit-hook.py  setup-hooks.py
snake_game/: __init__.py  game.py  main.py
snake_game/controllers/: __init__.py  game_controller.py  input_handler.py
snake_game/models/: __init__.py  enums.py  fruit.py  game_state.py  score.py  snake.py
snake_game/utils/: __init__.py  audio.py  constants.py  path_smoother.py
snake_game/views/: __init__.py  renderer.py  snake_renderer.py
tests/: __init__.py  conftest.py  test_controllers.py  test_input_handler_extended.py  test_integration.py  test_models.py  test_path_smoother.py  test_renderer_comprehensive.py  test_renderer_refactored.py  test_snake_renderers.py  test_splash_screen.py  test_utils.py
