[tool.poetry]
name = "snake-game"
version = "0.1.0"
description = "A classic Snake game implementation using pygame"
authors = ["Thomas Nelson <https://github.com/sfelf>"]
readme = "README.md"
packages = [{include = "snake_game"}]

[tool.poetry.dependencies]
python = "^3.13"
pygame = "2.6.1"
numpy = "^2.3.1"
pillow = "^11.2.1"
requests = "^2.32.4"

[tool.poetry.scripts]
snake-game = "snake_game.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
