[tool.poetry]
name = "snake-game"
version = "0.1.0"
description = "A classic Snake game implementation using pygame"
authors = ["Thomas Nelson <https://github.com/sfelf>"]
license = "CC-BY-NC-SA-4.0"
readme = "README.md"
packages = [{include = "snake_game"}]

[tool.poetry.dependencies]
python = "^3.13"
pygame = "2.6.1"
numpy = "^2.3.1"
pillow = "^11.2.1"
requests = "^2.32.4"
setuptools = "<81"

[tool.poetry.scripts]
snake-game = "snake_game.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^4.1.0"
coverage = "^7.3.0"
black = "^24.3.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.12.2"
flake8-tidy-imports = "^4.10.0"
flake8-docstrings = "^1.7.0"
flake8-comprehensions = "^3.14.0"
isort = "^5.13.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
flake8-import-order = "^0.19.2"
flake8-absolute-import = "^1.0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["snake_game"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["snake_game"]
known_third_party = ["pygame", "numpy", "pillow", "requests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_alphabetical_sort_within_sections = true
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pygame.*",
    "numpy.*",
    "PIL.*",
    "requests.*"
]
ignore_missing_imports = true
